# rust-ffi-demo

./: Cargo.toml  README.md  abc.json  build.rs
src/: main.rs
