[package]
name = "rust-ffi-demo"
version = "0.1.0"
authors = ["peakchen90 <1558267774@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc="0.2"

[build-dependencies]
cc = "1.0"
dunce = "0.1"
